@@ -4,13 +4,13 @@ import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.util.List;
 import java.util.Locale;
-import java.util.Random;
+//import java.util.Random;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 public class Util {
 
-    private static final Random RANDOM = new Random(0);
+//    private static final Random RANDOM = new Random(0);
     private static final DecimalFormat formatter = new DecimalFormat("#.##", new DecimalFormatSymbols(Locale.US));
 
     public static void delay() {
@@ -25,7 +25,7 @@ public class Util {
 
     public static double format(double number) {
         synchronized (formatter) {
-            return new Double(formatter.format(number));
+            return Double.valueOf(formatter.format(number));
         }
     }
 
